--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_margin="14dp"
     android:layout_height="wrap_content">
-
     <TextView
         android:id="@+id/textView_nameBet"
         android:layout_width="wrap_content"
@@ -16,7 +16,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/textView_status"
         android:layout_width="wrap_content"
@@ -27,7 +26,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_nameBet" />
-
     <TextView
         android:id="@+id/textView_betAmount"
         android:layout_width="wrap_content"
@@ -38,7 +36,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_status" />
-
     <TextView
         android:id="@+id/textView_winAmount"
         android:layout_width="wrap_content"
@@ -49,13 +46,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_betAmount" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@+id/textView_winAmount">
-
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_win"
             android:layout_width="46dp"
@@ -64,9 +59,8 @@
             android:background="@drawable/ic_baseline_check_box_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_loss"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"></androidx.appcompat.widget.AppCompatImageButton>
-
+            app:layout_constraintTop_toTopOf="parent">
+        </androidx.appcompat.widget.AppCompatImageButton>
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_loss"
             android:layout_width="46dp"
@@ -75,9 +69,8 @@
             android:background="@drawable/ic_baseline_cancel_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_delete"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"></androidx.appcompat.widget.AppCompatImageButton>
-
+            app:layout_constraintTop_toTopOf="parent">
+        </androidx.appcompat.widget.AppCompatImageButton>
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_delete"
             android:layout_width="46dp"
@@ -86,11 +79,7 @@
             android:background="@drawable/ic_baseline_delete_forever_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"></androidx.appcompat.widget.AppCompatImageButton>
-
-
+            app:layout_constraintTop_toTopOf="parent">
+        </androidx.appcompat.widget.AppCompatImageButton>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
