--- a/app/src/main/res/layout/fragment_add_bet.xml
+++ b/app/src/main/res/layout/fragment_add_bet.xml
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editText_Odd" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button"
+        android:id="@+id/button_add"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
