--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_margin="14dp"
+    android:background="@drawable/round_corner_layout"
+    android:id="@+id/layout_item"
     android:layout_height="wrap_content">
     <TextView
         android:id="@+id/textView_nameBet"
@@ -46,11 +47,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_betAmount" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:layout_marginBottom="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_winAmount">
+
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_win"
             android:layout_width="46dp"
@@ -59,8 +64,8 @@
             android:background="@drawable/ic_baseline_check_box_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_loss"
-            app:layout_constraintTop_toTopOf="parent">
-        </androidx.appcompat.widget.AppCompatImageButton>
+            app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatImageButton>
+
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_loss"
             android:layout_width="46dp"
@@ -69,8 +74,8 @@
             android:background="@drawable/ic_baseline_cancel_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_delete"
-            app:layout_constraintTop_toTopOf="parent">
-        </androidx.appcompat.widget.AppCompatImageButton>
+            app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatImageButton>
+
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_delete"
             android:layout_width="46dp"
@@ -79,7 +84,6 @@
             android:background="@drawable/ic_baseline_delete_forever_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-        </androidx.appcompat.widget.AppCompatImageButton>
+            app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatImageButton>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
